--- a/cms_package/templates/events_index.html
+++ b/cms_package/templates/events_index.html
@@ -39,14 +39,19 @@
   <!-- Events List -->
   <div class="events-list">
     {{#each events sort="date" order="asc"}}
-    <article class="event-row">
-      <div class="event-row-content">
+    <article class="event-row" style="position: relative; overflow: hidden;">
+      {{#if image}}
+      <div style="position: absolute; inset: 0; z-index: 0;">
+        <img src="{{image}}" alt="{{name}}" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.2;">
+      </div>
+      {{/if}}
+      <div class="event-row-content" style="position: relative; z-index: 1;">
         <div class="event-row-meta">
           <span class="date">{{date}}</span>
         </div>
         <h3 class="event-row-title">{{name}}</h3>
       </div>
-      <a href="{{url}}" class="btn btn-primary">View Event</a>
+      <a href="{{url}}" class="btn btn-primary" style="position: relative; z-index: 1;">View Event</a>
     </article>
     {{/each}}
   </div>
